# gwas-deps

./: .gitignore  CMakeLists.txt  README.md  default.nix  exp_lz.cpp  fastpfortest.cpp  main.cpp  raw.cpp
lz_bin/share/libzippp/: libzipppTargets-release.cmake  libzipppTargets.cmake
